src/objects/EFT_Transaction_Status__c.object
<CustomObject>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card Address Verify</fullName>
                </value>
                <value>
                    <fullName>Credit Card PIN Verify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesHeader</label>
        <referenceTo>SalesHeader__c</referenceTo>
        <relationshipLabel>EFT Transaction Status</relationshipLabel>
        <relationshipName>EFT_Transaction_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EFT Transaction Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EFT  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EFT Transaction Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>